--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,6 +1,7 @@
 .loading{
     width: 100vw;
-    height: 100vw;
+    box-sizing: border-box;
+    height: 100vh;
     background-color: whitesmoke;
     display: grid;
     place-items: center;
