--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -35,6 +35,7 @@
 }
 
 .login_container{
+    width: 100%;
     display: flex;    
     flex-direction: column;
     padding: 20px;
@@ -77,14 +78,7 @@ form > h1 {
     height: 30px;
     border: 1px solid #926b07;
     margin-top: 10px;
-    cursor: pointer;
     
-}
-
-.login_signInBtn:hover{
-
-    background-color: #ffd66d;
-    transition: all 500ms;
 }
 
 .login_google{
@@ -93,13 +87,7 @@ form > h1 {
     height: 30px;
     border: 1px solid darkgray;
     margin-top: 10px;
-    background-color: #88bec7;
-    cursor: pointer;
-}
-
-.login_google:hover{
-    background-color: hsl(189, 51%, 86%);
-    transition: all 500ms;
+    background-color: #92d3dd;
 }
 
 .login_registerBtn{
